# zspin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yaml
docs/: architecture.md  enterprise_platform_blueprint.md  platform_kernel_blueprint.md  reliability_intelligence_backbone.md  workflow.md
examples/: config.json  scaling_input.json
examples/betting-platform-mvp/: README.md  docker-compose.yml
examples/enterprise-blueprint/: README.md
examples/zspin-cloud-saas/: README.md
gitops/: argocd-app.yaml
helm/zspin/: Chart.yaml  values.yaml
k8s/: api-service.yaml  cloudflared.yaml  deployment.yaml  federation.yaml  global-lb.yaml  hpa.yaml  ingress.yaml  istio-gateway.yaml  kafka.yaml  postgres.yaml  region-labels.yaml  rollout.yaml  service.yaml  virtualservice.yaml
observability/: alerts.yaml  grafana.yaml  prometheus-deploy.yaml
policy/: opa.rego
reports/: master_meta_audit.md
scripts/: build_release.sh  deep_audit.py  validate.py
src/zspin/: __init__.py  aiops.py  apikeys.py  apiserver.py  audit.py  auth.py  billing.py  cache.py  cli.py  compliance.py  config.py  control_loop.py  controller.py  crd.py  db.py  diagnostics.py  distributed_loop.py  etcd.py  events.py  finops.py  go_live.py  installer.py  intelligence.py  leader.py  logging_utils.py  main.py  master_meta.py  metering.py  (+12 more)
tests/: test_config.py  test_control_plane.py  test_deep_audit.py  test_go_live.py  test_k8s_registry.py  test_kv_api.py  test_kv_stack.py  test_master_meta.py  test_platform_and_observability.py  test_scaling.py  test_workflow.py
(+98 files in other folders)
