[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zspin"
version = "0.1.0"
description = "Deterministic automation and compliance-ready workflow toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "zspin maintainers"}]
license = {text = "MIT"}
dependencies = [
  "prometheus-client>=0.20.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "psycopg2-binary>=2.9.9",
  "redis>=5.2.0",
  "stripe>=11.0.0",
]

[project.scripts]
zspin = "zspin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
